# One

./: aliyun-emas-services.json  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: auth.properties  weather.properties
app/src/main/java/com/example/one/: App.java
app/src/main/java/com/example/one/act/: AlarmAct.java  AlarmActivity.java  AnswerAct.java  AudioRecord2Manager.java  CalculatorAct.java  CodeAct.java  MainAct.java  MainActivity.java  MarqueeviewAct.java  MyTimerAct.java  QuestionAct.java  RollingTextAct.java  SocketAct.java  SocketSampleAct.java  ThreadAct.java  XunFeiWSClient.java
app/src/main/java/com/example/one/adapter/: LogAdapter.java
app/src/main/res/drawable/: fan.xml
app/src/main/res/layout/: activity_answer.xml  activity_baidu.xml  activity_baidu_map.xml  activity_bluetooth.xml  activity_calculator.xml  activity_code.xml  activity_excel.xml  activity_frame_animation.xml  activity_hot_update.xml  activity_instrumentation.xml  activity_main.xml  activity_marqueeview.xml  activity_mq.xml  activity_my_timer.xml  activity_notice.xml  activity_question.xml  activity_rolling_text.xml  activity_socket.xml  activity_socket_sample.xml  activity_socket_xact.xml  activity_splash.xml  activity_thread.xml  activity_voice_recode_acitvity.xml  activity_weather.xml  activity_web.xml  activity_white_list.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimen.xml  strings.xml  style.xml  themes.xml
app/src/main/res/xml/: access.xml
gradle/wrapper/: gradle-wrapper.properties
(+80 files in other folders)
